--- a/main.html
+++ b/main.html
@@ -6,7 +6,13 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body
+    <h1>Time and Space Complexity</h1>
+	<p>Time Complexity Describes the amount of time an algorithm takes to complete as a function of the length of the input</p>
+	<p><b>Space Complexity</b> Space Complexity refers to the amount of memory space an algorithm needs relative to the input size.</p>
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
