--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body
     <h1>Time and Space Complexity</h1>
-	<p>Time Complexity Describes the amount of time an algorithm takes to complete as a function of the length of the input.It helps developers analyze and compare the efficiency of different algorithms.</p>
+	<p>Time Complexity Describes the amount of time an algorithm takes to complete as a function of the length of the input.It helps developers analyze and to cheak how much efficient algorithms is.</p>
 	<p><b>Space Complexity</b> Space Complexity refers to the amount of memory space an algorithm needs relative to the input size. It's often expressed using Big O notation, such as O(n)</p>
 
 
