--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body
     <h1>Time and Space Complexity</h1>
-	<p>Time complexity Describes the amount of time an algorithm takes to complete as a function of the length of the input.It helps developers analyze and to cheak how much efficient algorithms is.</p>
-	<p><b>Space Complexity</b> Space Complexity refers to the amount of memory space an algorithm needs relative to the input size. It's often expressed using Big O notation, such as O(n). </p>
+	<p> Time complexity, efficient Time complexity Describes the amount of time an algorithm takes to complete as a function of the length of the input.It helps developers analyze and to cheak how much efficient algorithms is.</p>
+	<p><b>Space Complexity</b> Space Complexity, O(n) Space Complexity refers to the amount of memory space an algorithm needs relative to the input size. It's often expressed using Big O notation, such as O(n). </p>
 
 
 	
