--- a/main.html
+++ b/main.html
@@ -7,9 +7,15 @@
 </head>
 
 <body
-    <h1>Time and Space Complexity  Time, Space, Complexity</h1>
-	<p>Time complexity, efficient  Time complexity Describes the amount of time an algorithm takes to complete as a function of the length of the input.It helps developers analyze and to cheak how much efficient algorithms is.</p>
-	<p><b>Space Complexity </b> Space Complexity, O(n) Space Complexity refers to the amount of memory space an algorithm needs relative to the input size. It's often expressed using Big O notation, such as O(n). </p>
+    <h1>Understanding Time, Space, and Complexity</h1>
+
+	<p>
+    Time complexity refers to the computational complexity that describes the amount of time it takes to run an algorithm. An algorithm with low time complexity is considered more efficient and better suited for handling large inputs.
+  </p>
+	
+	<p>
+		<b>Space Complexity</b> refers to the amount of memory an algorithm needs to run as a function of the input size. It is commonly expressed using notations like O(n), where 'n' represents the input size.
+	</p>
 
 
 	
